[gd_scene load_steps=37 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://player.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Camera2D.gd" type="Script" id=3]
[ext_resource path="res://sprites/shadow_under.png" type="Texture" id=4]
[ext_resource path="res://PixelSprite.gd" type="Script" id=5]
[ext_resource path="res://PixelDynamicCapsule.gd" type="Script" id=6]
[ext_resource path="res://sprites/shadow_top.png" type="Texture" id=7]
[ext_resource path="res://PlayerHitFreeze.gd" type="Script" id=8]
[ext_resource path="res://sounds/main_music.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/button_click.wav" type="AudioStream" id=10]
[ext_resource path="res://HealthBar.tres" type="SpriteFrames" id=11]
[ext_resource path="res://sounds/dash.wav" type="AudioStream" id=12]
[ext_resource path="res://sprites/particle-x-sheet.png" type="Texture" id=13]
[ext_resource path="res://AttackShadow.gd" type="Script" id=14]
[ext_resource path="res://PlayerAttackFreeze.gd" type="Script" id=15]
[ext_resource path="res://MusicTimer.gd" type="Script" id=16]
[ext_resource path="res://sounds/lazer.wav" type="AudioStream" id=17]
[ext_resource path="res://sounds/player attack 2.wav" type="AudioStream" id=18]
[ext_resource path="res://AshFX.gd" type="Script" id=19]
[ext_resource path="res://sprites/ash_cone.png" type="Texture" id=20]
[ext_resource path="res://sprites/white.png" type="Texture" id=21]
[ext_resource path="res://AshParticles.tres" type="Material" id=22]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "wave",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "wave",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=12]
radius = 48.0
height = 0.0

[sub_resource type="CanvasItemMaterial" id=13]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="ParticlesMaterial" id=14]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 49, 0 )
initial_velocity = 80.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 16.0
anim_speed = 1.0

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
pause_mode = 1
script = ExtResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
volume_db = -12.0
autoplay = true
bus = "Music"

[node name="MusicTimer" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 16 )

[node name="AshParticles" type="Particles2D" parent="."]
pause_mode = 2
show_behind_parent = true
material = SubResource( 1 )
z_index = 4090
z_as_relative = false
emitting = false
amount = 300
lifetime = 8.0
visibility_rect = Rect2( -160, -90, 320, 180 )
local_coords = false
draw_order = 1
process_material = ExtResource( 22 )
texture = ExtResource( 21 )
__meta__ = {
"_edit_lock_": true
}

[node name="AshFX" type="Node2D" parent="."]
z_index = 1
z_as_relative = false
script = ExtResource( 19 )
texture = ExtResource( 20 )

[node name="Fog" type="AnimatedSprite" parent="."]
scale = Vector2( 12, 12 )
z_index = 20
z_as_relative = false
frames = SubResource( 6 )
animation = "wave"
frame = 3
playing = true
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Fog Top" type="AnimatedSprite" parent="."]
scale = Vector2( 12, 12 )
z_index = 4095
z_as_relative = false
frames = SubResource( 11 )
animation = "wave"
frame = 1
playing = true
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 2
current = true
zoom = Vector2( 2, 2 )
process_mode = 0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="HealthBar" type="AnimatedSprite" parent="Camera2D"]
pause_mode = 1
position = Vector2( -1232, -848 )
scale = Vector2( 24, 24 )
z_index = 4096
z_as_relative = false
frames = ExtResource( 11 )
animation = "4"
frame = 2
playing = true
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 12, 12 )
frames = ExtResource( 2 )
animation = "attack"
playing = true
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 24 )
shape = SubResource( 12 )
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerHitFreeze" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 8 )

[node name="Hit" type="AudioStreamPlayer" parent="PlayerHitFreeze"]
stream = ExtResource( 10 )
volume_db = -4.0
pitch_scale = 0.5

[node name="PlayerAttackFreeze" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 15 )

[node name="Lazer" type="AudioStreamPlayer" parent="PlayerAttackFreeze"]
stream = ExtResource( 17 )
volume_db = -4.0
pitch_scale = 4.0

[node name="Hit" type="AudioStreamPlayer" parent="PlayerAttackFreeze"]
stream = ExtResource( 18 )
volume_db = -4.0

[node name="AttackShadow" type="Node2D" parent="PlayerAttackFreeze"]
visible = false
z_index = 4090
z_as_relative = false
script = ExtResource( 14 )

[node name="DashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -6.0

[node name="DashParticles" type="Particles2D" parent="."]
show_behind_parent = true
material = SubResource( 13 )
emitting = false
amount = 16
lifetime = 0.2
one_shot = true
visibility_rect = Rect2( -512, -512, 1024, 1024 )
local_coords = false
draw_order = 1
process_material = SubResource( 14 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}
